--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>my second repo</title>
 </head>
 <body>
-    
+    <h1>this is my second heading</h1>
+    <h2>my is my second heading</h2>
+    <h3>my is my third heading</h3>
+    <h3>my is my third heading</h3>
+    <p>this is paragraph</p>
 </body>
 </html>
