--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>my is my third heading</h3>
     <h3>my is my third heading</h3>
     <p>this is paragraph</p>
+    <img src="tom.jpg">
 </body>
+
 </html>
