--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1>this is my second heading</h1>
-    <h2>my is my second heading</h2>
+    <h2>my is my second heading</h2> 
     <h3>my is my third heading</h3>
     <h3>my is my third heading</h3>
     <p>this is paragraph</p>
     <img src="tom.jpg">
+    <img src="decapp.png"
 </body>
 
 </html>
