--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h3>my is my third heading</h3>
     <p>this is paragraph</p>
     <img src="tom.jpg">
-    <img src="decap.png"
+    <img src="decap.jpg"
 </body>
 
 </html>
